<resources>
    <string name="app_name">CalculaGorjeta</string>
    <string name="total_conta">Total Conta</string>
    <string name="dez_porcento">10%</string>
    <string name="quinze_porcento">15%</string>
    <string name="vinte_porcento">20%</string>
    <string name="gorjeta">Gorjeta</string>
    <string name="total">Total</string>
    <string name="personalizado">Personalizado</string>
    <string name="QtdePessoa" >Qtde Pessoas</string>
    <string name="totalIndividual" >Total individual</string>
</resources>
